update reading and lab

--- a/0-introduction-to-actions.ipynb
+++ b/0-introduction-to-actions.ipynb
@@ -91,16 +91,25 @@
    "source": [
     "Now let's understand this file, beginning at the top.\n",
     "\n",
-    "* It first names everything that follows as the workflow `CI`.  \n",
-    "* Next is what triggers the workflow, a push to the branch `main`. \n",
+    "* `name: CI` - It first labels everything that follows as the workflow `CI`.  \n",
+    "* `on: push` Next is what triggers the workflow, a push to the branch `main`. \n",
     "\n",
-    "The `jobs` specifies the different processes to run.  So the first job we name is `build`, and it kicks off a series of steps.  This job will run on a computer maintained by github, so `runs-on` specifies that we want the job to run on a computer with the latest version of `ubuntu`.\n",
+    "* `jobs` - This is a listof the different jobs to run when the event occurs.\n",
+    "* `build` - This is the name of the job.  So the first job we name is `build`, and it kicks off a series of steps.  The name can be anything, but `build` works well.  \n",
+    "* `runs-on`: job will run on a computer maintained by github, so `runs-on` specifies that we want the job to run on a computer with the latest version of `ubuntu`.  This is similar to specifying an AMI of ubuntu for Amazon.\n",
     "\n",
     "Next comes the steps.  \n",
     "\n",
-    "The first step is predefined.  The `uses: actions/checkout@v2` step is a an existing action defined by github.  And this `checkout@v2` step downloads the current repository.\n",
+    "```yaml\n",
+    "steps:\n",
+    "      - uses: actions/checkout@v2\n",
+    "      - name: Run a one-line script\n",
+    "        run: echo Hello, world!\n",
+    "```\n",
     "\n",
-    "> You can see the action defined [here](https://github.com/actions/checkout).\n",
+    "* `uses: actions/checkout@v2` - is a an existing action defined by github.  So whenever we say `uses`, we an action defined elsewhere.  You can see the action defined [here](https://github.com/actions/checkout).\n",
+    "\n",
+    "So the `checkout@v2` step downloads our current repository onto our action's ubuntu machine.\n",
     "\n",
     "Then the next step is simply to run `echo Hello, world!`, which displays that on the terminal.  And we named that step `Run a one-line script`."
    ]
@@ -315,7 +324,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.10.14"
   }
  },
  "nbformat": 4,
